Boostrap modal input bug on mobile devices.. quite annoying, with some hack solutions... slide out menu

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -222,7 +222,7 @@ body {
 	width: 100%;
 	left: 0;
 	padding: 0 15%;
-	background: url("/img/searchIcon.png") 180px 40px/23px 26px no-repeat;
+	background: url("/img/searchIcon.png") 13% 50%/23px 26px no-repeat;
 	&:focus {
 		outline: none;
 	}
@@ -230,6 +230,10 @@ body {
 
 .header-search .auth {
 	cursor: pointer;
+}
+
+.modal {
+//  position: absolute;
 }
 
 .modal-dialog {
@@ -249,6 +253,17 @@ body {
     z-index: 10;
     position: relative;
     margin-right: 10px;
+}
+
+.modal-ios {
+  position: absolute;
+  overflow: visible;
+  overflow-x: visible;
+  overflow-y: visible;
+}
+
+.modal-backdrop-ios {
+  position: absolute;
 }
 
 .modal-backdrop {
@@ -487,6 +502,7 @@ body {
 
 .register, .login {
     height: 100%;
+    z-index: 10000;
 	input {
 		margin: 15px 0;
 		width: 100%;
@@ -540,7 +556,7 @@ body {
 }
 
 .event-slider-day {
-  max-width: 1070px;
+  max-width: 970px;
   margin: 0 auto;
 }
 
@@ -683,6 +699,11 @@ body {
 	}
 }
 
+.event-loop {
+  float: left;
+  width: 100%;
+}
+
 .like-icon {
 	height: 41px;
 	width: 41px;
@@ -708,45 +729,51 @@ body {
 
 
 .like-icon-mobile {
-	height: 31px;
-	width: 31px;
-	background: url('/img/mobileLikeIcon.png') no-repeat 0 0/31px 31px;
-	cursor: pointer;
-	float: right;
-  background-size: cover;
+    height: 25px;
+    width: 25px;
+    background: url("/img/mobileLikeIcon.png") no-repeat 0 0/25px 25px;
+    cursor: pointer;
+    float: right;
+    background-size: cover;
+    margin-bottom: 15px;
 	&.active {
-        background: url("/img/likeIconActive.png") no-repeat 0px 0/31px 31px;
-        height: 31px;
-        width: 31px;
+        background: url("/img/likeIconActive.png") no-repeat 0px 0/25px 25px;
+        height: 25px;
+        width: 25px;
         background-size: cover;
 	}
 }
 
 .dislike-icon-mobile {
-	height: 31px;
-	width: 31px;
-	background: url('/img/mobileLikeIcon.png') no-repeat 0px -53px / 31px 31px;
+	height: 25px;
+	width: 25px;
+	background: url('/img/mobileLikeIcon.png') no-repeat 0px -43px / 25px 25px;
     background-size: cover;
 	cursor: pointer;
 	float: right;
 	&.active {
-        background: url("/img/likeIconActive.png") no-repeat -46px 0/31px 31px;
-        height: 31px;
-        width: 31px;
+        background: url("/img/likeIconActive.png") no-repeat -37px 0/25px 25px;
+        height: 25px;
+        width: 25px;
         background-size: cover;
 	}
 }
 
 
 .mobile-vote-icons {
-  width: 12%;
+  width: 11%;
   float: left;
-  display: inline-block;
-  margin: 13px 20px;
+  display: inline;
+  height: 100%;
+  margin: 13px 1px;
 }
 
 .event {
 	padding: 10px;
+}
+
+.register {
+  padding: 0 5px;
 }
 
 .facebookButton {
@@ -1259,12 +1286,22 @@ button.create-account[disabled='disabled'] {
 		display: inline;
 	}
 
-	.mobile-menu {
+    .search-large {
+      background: url("/img/searchIcon.png") 15px 40px/23px 26px no-repeat;
+    }
+
+  //Drawer menu styles
+  .mobile-menu {
 		background: url("/img/menuIcon.png") 18px 10px/26px 26px no-repeat;
 		width: 20%;
 		height: 38px;
 		display: inline;
 	}
+
+
+  .snap-drawer {
+    background: #2E2526;
+  }
 
 	.mobile-logo {
 		width: 60%;
@@ -1278,8 +1315,13 @@ button.create-account[disabled='disabled'] {
 		float: left;
 	}
 
-  .mobile-event-container {
-//    padding: 20px;
+  .register {
+    padding: 0 5px;
+  }
+
+  .facebookButton {
+    background: #3b5998 url("/img/facebookIcon.png") no-repeat 93% 13px/17.5px 35px;
+    font-size: .8em;
   }
 
     .mobile-event-image {
@@ -1291,7 +1333,7 @@ button.create-account[disabled='disabled'] {
     }
 
 	.mobile-event-details {
-      width: 43%;
+      width: 56%;
       padding: 10px;
       display: inline-block;
       float: left;
